--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" class="uk-background-muted">
 <head>
-    <!-- <script src="js-les.js"></script> -->
+    <title>Просчет бюджета</title>
     <script src="home-task-1.js"></script>
 </head>
 <body>
 
-   1111
+   Просчет бюджета
 
 </body>
 </html>
