--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="en" class="uk-background-muted">
 <head>
     <title>Просчет бюджета</title>
-    <script src="home-task-1.js"></script>
+    <script src="main.js"></script>
+    <!-- UIkit CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.2.1/dist/css/uikit.min.css" />
+    <!-- UIkit JS -->
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.2.1/dist/js/uikit.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.2.1/dist/js/uikit-icons.min.js"></script>
 </head>
 <body>
 
